Set#merge: raise if called during iteration

[Bug #21332]